<resources>
    <string name="app_name">straysaver</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="register">register</string>
    <string name="click_to_register">Click to register</string>


</resources>