<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:orientation="vertical"
android:gravity="center"
android:padding="18dp"
android:layout_margin="10dp"
android:layout_height="match_parent"
tools:context=".login">


<TextView
    android:id="@+id/text"
    android:text="@string/login"
    android:textSize="29sp"
    android:gravity="center"
    android:layout_marginBottom="20dp"
    android:textStyle="bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emaill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>


</com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="password"/>

</com.google.android.material.textfield.TextInputLayout>

<ProgressBar
    android:id="@+id/progressbar"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>



<Button
    android:id="@+id/btnlog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="login"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/click_to_register"
    android:id="@+id/registernow"
    android:textSize="20sp"
    android:gravity="center"
    android:textStyle="bold"/>

</LinearLayout>